tui/src/components/text_editor/snapshots/kimun_notes__components__text_editor__snapshot_tests__snap_autolink.snap
---
source: tui/src/components/text_editor/snapshot_tests.rs
expression: "serialize_render(\"Visit <https://example.com> now.\", 80)"
---
[row 0]
Style::new().fg(Color::Rgb(235, 219, 178)) | "Visit "
Style::new().fg(Color::Rgb(250, 189, 47)).underlined() | "https://example.com"
Style::new().fg(Color::Rgb(235, 219, 178)) | " now."
