tui/src/components/text_editor/snapshots/kimun_notes__components__text_editor__snapshot_tests__snap_fenced_code_no_lang.snap
---
source: tui/src/components/text_editor/snapshot_tests.rs
expression: "serialize_render(\"```\\nlet x = 1;\\n```\", 80)"
---
[row 0]
Style::new().fg(Color::Rgb(168, 153, 132)) | "```"

[row 1]
Style::new().fg(Color::Rgb(168, 153, 132)) | "let x = 1;"

[row 2]
Style::new().fg(Color::Rgb(168, 153, 132)) | "```"
