tui/src/components/text_editor/snapshots/kimun_notes__components__text_editor__snapshot_tests__snap_fenced_code_with_lang.snap
---
source: tui/src/components/text_editor/snapshot_tests.rs
expression: "serialize_render(\"```rust\\nfn main() {}\\n```\", 80)"
---
[row 0]
Style::new().fg(Color::Rgb(168, 153, 132)) | "```rust"

[row 1]
Style::new().fg(Color::Rgb(168, 153, 132)) | "fn main() {}"

[row 2]
Style::new().fg(Color::Rgb(168, 153, 132)) | "```"
