tui/src/components/text_editor/snapshots/kimun_notes__components__text_editor__snapshot_tests__snap_hashtag_in_fenced_suppressed.snap
---
source: tui/src/components/text_editor/snapshot_tests.rs
expression: "serialize_render(\"```\\n#nope\\n```\", 80)"
---
[row 0]
Style::new().fg(Color::Rgb(168, 153, 132)) | "```"

[row 1]
Style::new().fg(Color::Rgb(168, 153, 132)) | "#nope"

[row 2]
Style::new().fg(Color::Rgb(168, 153, 132)) | "```"
