tui/src/components/text_editor/snapshots/kimun_notes__components__text_editor__snapshot_tests__snap_hashtag_in_inline_code_suppressed.snap
---
source: tui/src/components/text_editor/snapshot_tests.rs
expression: "serialize_render(\"call `#tag` here\", 80)"
---
[row 0]
Style::new().fg(Color::Rgb(235, 219, 178)) | "call "
Style::new().fg(Color::Rgb(235, 219, 178)).bg(Color::Rgb(80, 73, 69)) | "#tag"
Style::new().fg(Color::Rgb(235, 219, 178)) | " here"
