tui/src/components/text_editor/snapshots/kimun_notes__components__text_editor__snapshot_tests__snap_hashtag_in_link_destination_suppressed.snap
---
source: tui/src/components/text_editor/snapshot_tests.rs
expression: "serialize_render(\"See [docs](https://example.com/#fragment).\", 80)"
---
[row 0]
Style::new().fg(Color::Rgb(235, 219, 178)) | "See "
Style::new().fg(Color::Rgb(250, 189, 47)).underlined() | "docs"
Style::new().fg(Color::Rgb(235, 219, 178)) | "."
