tui/src/components/text_editor/snapshots/kimun_notes__components__text_editor__snapshot_tests__snap_hashtag_in_paragraph.snap
---
source: tui/src/components/text_editor/snapshot_tests.rs
expression: "serialize_render(\"prefix #tag suffix\", 80)"
---
[row 0]
Style::new().fg(Color::Rgb(235, 219, 178)) | "prefix "
Style::new().fg(Color::Rgb(254, 128, 25)).bold() | "#tag"
Style::new().fg(Color::Rgb(235, 219, 178)) | " suffix"
