tui/src/components/text_editor/snapshots/kimun_notes__components__text_editor__snapshot_tests__snap_heading_h1.snap
---
source: tui/src/components/text_editor/snapshot_tests.rs
expression: "serialize_render(\"# Heading One\", 80)"
---
[row 0]
Style::new().fg(Color::Rgb(124, 111, 100)) | "# "
Style::new().fg(Color::Rgb(250, 189, 47)).bold() | "Heading One"
